# ArcadeLauncher-Server

./: .gitignore  ArcadeLauncher-Server.pyproj  ArcadeLauncher-Server.sln  CLAUDE.md  Cargo.toml  Dockerfile  FEATURES.md  HANDOFF.md  README.md  ROADMAP.md  arcade_server.py  catalog.example.json  check-runner.ps1  fresh-extract.ps1  generate_catalog.py  provision-runner.ps1  rereg-runner.ps1  setup-runner.ps1  state-runner.ps1  tail-runner.ps1  verify-tools.ps1
.forgejo/workflows/: smoke.yml
.github/workflows/: server-release.yml
deploy/: arcadelauncher-server.env.example  arcadelauncher-server.python.service  arcadelauncher-server.service  install-linux.sh  install-rust-build-env.sh
deploy/k8s/: 00-namespace.yaml  10-secret.example.yaml  11-config.yaml  20-mariadb.yaml  30-redis.yaml  40-library-nfs.yaml  50-arcade-api.yaml  60-arcade-scanner.yaml  70-ingress.yaml  80-store.yaml  README.md
deploy/turn/: README.md  docker-compose.yml  nginx-stream.conf.example  turnserver.conf.example
src/: admin_extra.rs  admin_html.rs  auth.rs  crypto.rs  db.rs  db_setup.rs  devices.rs  discord.rs  fanout.rs  files.rs  guard.rs  handlers.rs  igdb.rs  main.rs  manifest.rs  mesh_api.rs  models.rs  password_reset.rs  registration.rs  requests_app.rs  requests_index.html  s3.rs  scan.rs  scan_jobs.rs  social_api.rs  store_api.rs  store_auth.rs  store_downloads.rs  store_lib.rs  users_api.rs
store/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
store/src/: App.jsx  api.js  auth.jsx  main.jsx  styles.css
store/src/components/: LibraryButton.jsx
store/src/pages/: Download.jsx  GameDetail.jsx  Home.jsx  Library.jsx  Login.jsx  Register.jsx
