[package]
name = "arcadelauncher-server"
version = "2.0.11"
edition = "2021"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cookie = "0.18"
futures-util = "0.3"
hex = "0.4"
http = "1"
mime_guess = "2"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
rand = "0.8"
rust-scrypt = { package = "scrypt", version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
