[package]
name = "arcadelauncher-server"
version = "1.1.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cookie = "0.18"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }
mime_guess = "2"
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
notify = "6"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-scrypt = { package = "scrypt", version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
